<resources>
    <string name="app_name">iPattern</string>
    <string name="select_days">Select the days</string>
    <string name="go">GO!</string>
    <string name="prompt">Select a day</string>
    <string name="password"> Password</string>
    <string name="login">Login</string>
    <string name="i_am_a_parent">I am a parent</string>
    <string name="i_am_a_child">I am a child</string>
    <string-array name="days_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_description">Login with your Google account</string>
    <string name="register_hint">Click here to register</string>
    <string name="register">Register</string>
    <string name="activate_a_child_device">Activate a child device</string>
    <string name="done">Done</string>
    <string name="device_admin">Admin</string>
    <string name="device_admin_description">Admin Description blablabalbalabalabalablablablalbabababl ablablablalbalba</string>
    <string name="block_password">Enter the password to be applied to your child device.</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="apply">apply</string>
    <string name="choose_devices">Choose whose device will receive this action</string>
    <string name="out">Out</string>
    <string name="inside">Inside</string>
    <string name="time">Time</string>
    <string name="select_time_day">Select the day of the week and the start/end time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="day">Day</string>
</resources>
