<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_20dp"
    android:background="@drawable/dialog_backgound">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time_day"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_5dp"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_below="@id/line"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_start"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_40dp"
                android:editable="false"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/time"
                android:textSize="@dimen/font_14"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_end"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_40dp"
                android:editable="false"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/time"
                android:textSize="@dimen/font_14"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:gravity="center"
        android:layout_below="@id/ll"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_50dp"
        android:entries="@array/days_array"
        android:layout_below="@id/day"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/spinner"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/font_17"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_below="@id/line2"/>
</RelativeLayout>