<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_backgound">

    <EditText
        android:id="@+id/et_register"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_15"
        android:background="@null"
        android:gravity="center_horizontal|bottom"
        android:hint="@string/login"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignRight="@id/et_login"
        android:layout_alignLeft="@id/et_login"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/et_register"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/line1"
        android:textSize="@dimen/font_15"
        android:background="@null"
        android:gravity="center_horizontal|bottom"
        android:hint="@string/password"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignRight="@id/et_password"
        android:layout_alignLeft="@id/et_password"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/et_password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/font_17"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_below="@id/line2"/>
</RelativeLayout>